--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: Irreverent Analysis By J.B Mountford 
-description: Statistical modeling and analysis without any sense of seriousness or responcibility by unaffiliated researcher J.B Mountford
+title: Irreverent Analysis
+description: Statistical modelling and analysis without any sense of seriousness or responsibility by unaffiliated researcher J.B Mountford
+
