--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: Irreverent Analysis
 description: Statistical modelling and analysis without any sense of seriousness or responsibility by unaffiliated researcher J.B Mountford
 
