updated title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
-title: Irreverent Analysis
-description: Statistical modelling and analysis without any sense of seriousness or responsibility by unaffiliated researcher J.B Mountford
-
+title: J.B. Mountford: Brighton Based Data Science & Statistical Analysis 
+description: Innovative, commercially impactful business modeling & analysis  by academically unaffiliated freelance researcher J.B Mountford
