--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-name: J.B. Mountford: Brighton Based Data Science & Statistical Analysis 
-title: J.B. Mountford: Brighton Based Data Science & Statistical Analysis 
+name: J.B. Mountford - Brighton Based Data Science & Statistical Analysis 
+title: J.B. Mountford -  Brighton Based Data Science & Statistical Analysis 
 description: Innovative, commercially impactful business modeling & analysis  by academically unaffiliated freelance researcher J.B Mountford
