changed theme key

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # theme: jekyll-theme-cayman
-remote_theme: chrisrhymes/bulma-clean-theme
+theme: bulma-clean-theme
 name: J.B. Mountford - Brighton Based Data Science & Statistical Analysis 
 title: J.B. Mountford -  Brighton Based Data Science & Statistical Analysis 
 description: Innovative, commercially impactful business modeling & analysis  by academically unaffiliated freelance researcher J.B Mountford
